gl33-master/src/test/deca/context/invalid/other/affectation_void_boolean.deca
// Invalid test
// Affectation d'un void à un boolean

{
   void v;
   boolean b;
   
   b = v;
}
